# llm_wiki

./: .gitattributes  .gitignore  AGENTS.md  PREP_CHECKLIST.md  README.md  phase3_fix_instructions.md  pyproject.toml
config/: roles.yaml
core/: __init__.py  errors.py  id_allocator.py  models.py  storage.py  validation.py
docs/: DEPLOYMENT.md  DEV_GUIDE.md  PHASE1_STARTUP.md  checkpoints.md  design.md  governance.md  hash_spec.md
docs/design_changes/: change_1.md  change_2.md
docs/dev_memory/: BACKLOG.md  INDEX.md  phase_1_memory.md
docs/review/: design_review_phase_1.md  phase_10a_review_prompt.md  phase_1_review_prompt.md  phase_2_review_prompt.md  phase_3_review_prompt.md  phase_4_review_prompt.md  phase_5_review_prompt.md  phase_6_review_prompt.md  phase_7a_review_prompt.md  phase_7b_review_prompt.md  phase_8_review_prompt.md  phase_8b_review_prompt.md  phase_8c_review_prompt.md
docs/test-guides/: README.md
governed-api/governed_api/: __init__.py  audit.py  diff.py  middleware.py  pipeline.py  roles.py  types.py
index/: __init__.py  cjk.py  search.py  sqlite_index.py  synonyms.py  types.py
kb/: synonyms.jsonl
kb/skills/: ingest_skill.md  maintenance_skill.md  whisper_ingest_skill.md
mcp/: __init__.py
mcp/kb_server/: __init__.py  handlers.py  server.py  types.py
research/: __init__.py  store.py
review/: __init__.py  service.py
scripts/: rebuild_indexes.py  validate_skills.py
tests/core/: conftest.py  test_id_allocator.py  (+2 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web_api/: __init__.py  app.py  service.py
(+62 files in other folders)
